--- a/videos/videoTemplate.html
+++ b/videos/videoTemplate.html
@@ -13,7 +13,7 @@
      <div class="allPage" align="center">
           <div class="mobileVision">
                <header>
-                    <a href="#">
+                    <a href="../index.html">
                          <div class="logoArea"></div>
                     </a>
                </header>
