--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <meta charset="UTF-8"/>
      <meta http-equiv="X-UA-Compatible" content="IE-edge"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0, width=device-width, maximum-scale=1.0, minimal-ui">
+     <link rel="shortcut icon" href="https://lh3.googleusercontent.com/pw/AM-JKLWssRDQnb7L1jGdDxf9fgpDEgH1EofTnnczlXnW6LT4W8zsRQhnCRb_9YOjACu-79GnkrbAhbR84Xexbk_LH7b2z-sfYa_g1T9NoyxEhZfSsOEieou2270-Vl5gqK6G8mOL4iE_Y_EyGlA9ocno303j=s200-no" type="image/x-icon"/>
      <link rel="stylesheet" type="text/css" href="Css/videoTemplate.css"/>
      <link rel="stylesheet" type="text/css" href="Css/Config/manutencao.css"/>
 </head>
